made some update to show the order time and date on the view orders panel

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -155,6 +155,11 @@ img {
     display: inline-block;
 }
 
+.logo{
+    width: 500px;
+    display: inline-block;
+}
+
 h4 {
     display: inline-block;
     font-weight: normal;
